--- a/index.html
+++ b/index.html
@@ -57,7 +57,23 @@
                 width: 100%;
             }
         }
+
+        @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+            #mobile {
+                display: none;
+            }
+        }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9653PJ3RXV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9653PJ3RXV');
+    </script>
 </head>
 
 <body>
@@ -89,14 +105,7 @@
         </section>
     </main>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9653PJ3RXV"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-9653PJ3RXV');
-
         const element = document.querySelector("main");
         element.addEventListener('wheel', (event) => {
             event.preventDefault();
